// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordFormComponent must match the snapshot by default 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0 18px;
  border-radius: 30px;
  background-color: rgb(242,242,242);
  border-width: 1px;
  border-style: solid;
  border-color: rgba(0,0,0,0.2);
  margin-bottom: 15px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:last-child {
  margin-bottom: 0;
}

.c3 {
  border: none;
  background: transparent;
  background-color: transparent;
  padding: 0 10px;
  width: 100%;
  color: rgba(0,0,0,0.55);
  font-size: 14px;
  line-height: 35px;
}

.c4 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(232,24,68);
}

.c5 {
  margin-right: 0.375rem;
}

.c2 {
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgb(232,24,68);
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: 10px 0 0;
  max-width: 30.63rem;
}

@media (min-width:767) {
  .c3 {
    font-size: 16px;
    line-height: 40px;
  }
}

@media (min-width:47.94rem) {
  .c4 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c5 {
    margin-right: 0.625rem;
  }
}

@media (min-width:767px) {
  .c2 {
    font-size: 18px;
  }
}

<form
  className="c0"
  id="forgot_password"
>
  <div
    className="c1"
  >
    <label
      aria-label="common.form.email_label"
      className="c2"
      htmlFor="email"
    >
      <svg
        icon="envelope"
        lib="@fortawesome/react-fontawesome"
        prefix="far"
      />
    </label>
    <input
      aria-required={true}
      className="c3"
      id="email"
      name="email"
      placeholder="common.form.email_label"
      required={true}
      tabIndex={-1}
      type="email"
    />
  </div>
  <button
    className="c4"
    form="forgot_password"
    tabIndex={-1}
    type="submit"
  >
    <span
      className="c5"
    >
      <svg
        icon="paper-plane"
        lib="@fortawesome/react-fontawesome"
        prefix="far"
      />
    </span>
    forgot_password.send_link
  </button>
</form>
`;

exports[`ForgotPasswordFormComponent must match the snapshot with errors 1`] = `
.c4 {
  color: rgb(237,24,68);
  margin-bottom: 10px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  padding: 0 18px;
  border-radius: 30px;
  background-color: rgb(242,242,242);
  border-width: 1px;
  border-style: solid;
  border-color: rgb(237,24,68);
  margin-bottom: 15px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1:last-child {
  margin-bottom: 0;
}

.c3 {
  border: none;
  background: transparent;
  background-color: transparent;
  padding: 0 10px;
  width: 100%;
  color: rgba(0,0,0,0.55);
  font-size: 14px;
  line-height: 35px;
}

.c5 {
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Roboto Condensed Bold',Arial,serif;
  font-size: 0.875rem;
  border: none;
  border-radius: 1.875rem;
  text-transform: uppercase;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  padding: 0.3125rem 0.9375rem;
  color: rgb(255,255,255);
  background-color: rgb(232,24,68);
}

.c6 {
  margin-right: 0.375rem;
}

.c2 {
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgb(232,24,68);
  font-size: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  margin: 10px 0 0;
  max-width: 30.63rem;
}

@media (min-width:767) {
  .c3 {
    font-size: 16px;
    line-height: 40px;
  }
}

@media (min-width:47.94rem) {
  .c5 {
    font-size: 1rem;
    padding: 0.5625rem 1.25rem;
  }
}

@media (min-width:47.94rem) {
  .c6 {
    margin-right: 0.625rem;
  }
}

@media (min-width:767px) {
  .c2 {
    font-size: 18px;
  }
}

<form
  className="c0"
  id="forgot_password"
>
  <div
    className="c1"
  >
    <label
      aria-label="common.form.email_label"
      className="c2"
      htmlFor="email"
    >
      <svg
        icon="envelope"
        lib="@fortawesome/react-fontawesome"
        prefix="far"
      />
    </label>
    <input
      aria-required={true}
      className="c3"
      id="email"
      name="email"
      placeholder="common.form.email_label"
      required={true}
      tabIndex={-1}
      type="email"
    />
  </div>
  <p
    className="c4"
    id="authentification-email-error"
  >
    common.form.Error message 1
  </p>
  <button
    className="c5"
    form="forgot_password"
    tabIndex={-1}
    type="submit"
  >
    <span
      className="c6"
    >
      <svg
        icon="paper-plane"
        lib="@fortawesome/react-fontawesome"
        prefix="far"
      />
    </span>
    forgot_password.send_link
  </button>
</form>
`;
